# daggerverse

codegen/: .gitattributes  .gitignore  README.md  dagger.json  experimental.go  introspection.go  lint_name.go  main.go  schema.json
go-python-codegen/: dagger.json
go-python-codegen/dagger/: dagger.gen.go  main.go
go-python-codegen/dagger/dagger/: dagger.gen.go
go-python-codegen/dagger/templates/: python.tmpl
hello-world/: dagger.json  main.py  pyproject.toml
hello-world/src/: main.py
linguist/: dagger.json  pyproject.toml
linguist/src/: main.py
linguist/src/main/: __init__.py
poetry/: .gitignore  README.md  dagger.json  pyproject.toml
poetry/src/: main.py
python/: .gitignore  README.md  dagger.html  dagger.json
python-codegen/: .envrc  README.md  dagger.json  pyproject.toml
python-codegen/src/: main.py
python-codegen/src/main/: __init__.py
python/kcna23/: .gitignore  0.md  1.md  2.md  3.md  4.md  dagger.html
python/src/: main.py
textual/: README.md  dagger.json
textual/src/: main.py
textualize/: README.md  dagger.json
textualize/src/: main.py
